--- a/src/main/resources/templates/editCliente.html
+++ b/src/main/resources/templates/editCliente.html
@@ -57,45 +57,60 @@
 
 							</div>
 						</div>
-						
+
+
+
+
+
 						<div class="form-group row">
 							<div class="input-group">
 								<label class="col-lg-3 col-form-label form-control-label">Edad</label>
 
-								<div class="input-group-prepend" style="padding-left: 15px;">
-									<span class="input-group-text" id="basic-addon3">A&ntilde;os</span>
+								<div class="col-lg-7">
+									<input class="form-control number" type="number" min="18"
+										th:field="${cliente.usuario.edad}" readonly>
 								</div>
-								<input class="form-control number col-lg-5" type="number"
-									min="18" th:field="${cliente.usuario.edad}" readonly>
 
 							</div>
 						</div>
+
+
+
+
+
 
 						<div class="form-group row">
 							<label class="col-lg-3 col-form-label form-control-label">Rol</label>
 							<div class="col-lg-7">
-								<input class="form-control" type="text"
-									placeholder="CLIENTE" readonly>
+								<input class="form-control" type="text" placeholder="CLIENTE"
+									readonly>
 							</div>
 						</div>
-						
+
+
+
+
+
 						<div class="form-group row">
 							<label class="col-lg-3 col-form-label form-control-label">Provincia</label>
 							<div class="col-lg-7">
-								<select id="provincia" th:field="${cliente.usuario.provincia}">
+								<select class="form-control" id="provincia"
+									th:field="${cliente.usuario.provincia}">
 									<option value="Sevilla">Sevilla</option>
 									<option value="Huelva">Huelva</option>
-									<option value="Cadiz">Cadiz</option>
+									<option value="Cadiz">C&aacutediz</option>
 									<option value="Cordoba">Cordoba</option>
-									<option value="Jaen">Jaen</option>
-									<option value="Malaga">Malaga</option>
-									<option value="Almeria">Almeria</option>
+									<option value="Jaen">Ja&eacuten</option>
+									<option value="Malaga">M&aacutelaga</option>
+									<option value="Almeria">Almer&iacutea</option>
 									<option value="Granada">Granada</option>
 								</select>
-
-
 							</div>
 						</div>
+
+
+
+
 
 						<div class="form-group row">
 							<label class="col-lg-3 col-form-label form-control-label">Ciudad</label>
@@ -148,8 +163,9 @@
 
 						<div class="form-group row">
 							<div class="col-lg-12 text-center">
-								<input type="submit" class="btn btn-outline-primary btn-sm" value="Guardar">
-								<a type="button" class="btn btn-outline-dark btn-sm" th:href="@{/}">Cancelar</a>
+								<input type="submit" class="btn btn-outline-primary btn-sm"
+									value="Guardar"> <a type="button"
+									class="btn btn-outline-dark btn-sm" th:href="@{/}">Cancelar</a>
 							</div>
 						</div>
 
