--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -29,8 +29,7 @@
 			<th:block th:switch="${#authentication.getPrincipal()}">
 
 				<li th:case="'anonymousUser'" class="dropdown"><a href="#"
-					class="nav-link" data-toggle="dropdown"><strong>Iniciar
-							sesi&oacuten</strong> <span class="caret"></span></a>
+					class="nav-link" data-toggle="dropdown"><img class="user-login" width= "23px"  src="/images/user-white.svg"><span id="micuenta">  Mi cuenta</span></a>
 					<ul id="login-dp" class="dropdown-menu">
 						<li>
 							<div class="row">
