--- a/src/main/resources/templates/misCitas.html
+++ b/src/main/resources/templates/misCitas.html
@@ -67,11 +67,14 @@
 							</tr>
 						</tbody>
 					</table>
+					
+					
+					
 				</div>
 			</div>
 		</div>
 	</div>
-
+	<div th:replace="fragments/footer :: footer"></div>
 </body>
 
 <!--  <div th:replace="fragments/footer :: footer"></div> -->
