--- a/src/main/resources/templates/user-form.html
+++ b/src/main/resources/templates/user-form.html
@@ -48,14 +48,14 @@
 		<div class="form-group row">
 			<label class="col-lg-3 col-form-label form-control-label">Provincia</label>
 			<div class="col-lg-7">
-				<select id="provincia" th:field="${userForm.provincia}">
+				<select class="form-control" id="provincia" th:field="${userForm.provincia}">
 					<option value="Sevilla">Sevilla</option>
 					<option value="Huelva">Huelva</option>
-					<option value="Cadiz">Cadiz</option>
+					<option value="Cadiz">C&aacutediz</option>
 					<option value="Cordoba">Cordoba</option>
-					<option value="Jaen">Jaen</option>
-					<option value="Malaga">Malaga</option>
-					<option value="Almeria">Almeria</option>
+					<option value="Jaen">Ja&eacuten</option>
+					<option value="Malaga">M&aacutelaga</option>
+					<option value="Almeria">Almer&iacutea</option>
 					<option value="Granada">Granada</option>
 				</select>
 			</div>
@@ -73,11 +73,14 @@
 			<div class="input-group">
 				<label class="col-lg-3 col-form-label form-control-label">Edad</label>
 
-				<div class="input-group-prepend" style="padding-left: 15px;">
+			<!-- 	<div class="input-group-prepend" style="padding-left: 15px;">
 					<span class="input-group-text" id="basic-addon3">A&ntilde;os</span>
-				</div>
-				<input class="form-control number col-lg-5" type="number" min="18"
+				</div>  -->
+				
+				<div class="col-lg-7">
+				<input class="form-control number" type="number" min="18"
 					th:field="${userForm.edad}" required>
+					</div>
 
 			</div>
 		</div>
