--- a/src/main/resources/templates/crearServicioEstetico.html
+++ b/src/main/resources/templates/crearServicioEstetico.html
@@ -31,15 +31,26 @@
 							<input class="form-control" type=hidden
 								th:field="${servicioEstetico.id}">
 
+
+
+
+
+
+
+
+
+
+
+
 							<div class="form-group row">
 								<label class="col-lg-3 col-form-label form-control-label">Tipo</label>
 								<div class="col-lg-9">
-									<select id="provincia" th:field="${servicioEstetico.tipo}">
-										<option value="Peluqueria">Peluqueria</option>
+									<select class="form-control"  id="tiposservicio" th:field="${servicioEstetico.tipo}">
+										<option value="Peluqueria">Peluquer&iacutea</option>
 										<option value="Tinte">Tinte</option>
 										<option value="Pedicura y Manicura">Pedicura y
 											Manicura</option>
-										<option value="Depilacion">Depilacion</option>
+										<option value="Depilacion">Depilaci&oacuten</option>
 									</select>
 								</div>
 							</div>
@@ -69,8 +80,8 @@
 
 							<div class="form-group row">
 								<label class="col-lg-3 col-form-label form-control-label">Provincia</label>
-								<div class="col-lg-7">
-									<select id="provincia" th:field="${servicioEstetico.provincia}">
+								<div class="col-lg-9">
+									<select class="form-control" id="provincia" th:field="${servicioEstetico.provincia}">
 										<option value="Sevilla">Sevilla</option>
 										<option value="Huelva">Huelva</option>
 										<option value="Cadiz">Cadiz</option>
