--- a/src/main/resources/templates/perfilCliente.html
+++ b/src/main/resources/templates/perfilCliente.html
@@ -89,18 +89,22 @@
 						</div>
 					</div>
 
+
+
 					<div class="form-group row">
 						<div class="input-group">
 							<label class="col-lg-3 col-form-label form-control-label">Edad</label>
 
-							<div class="input-group-prepend" style="padding-left: 15px;">
-								<span class="input-group-text" id="basic-addon3">A&ntilde;os</span>
+							<div class="col-lg-7">
+								<input class="form-control number" type="number" min="18"
+									th:field="${cliente.usuario.edad}" readonly>
 							</div>
-							<input class="form-control number col-lg-5" type="number"
-								min="18" th:field="${cliente.usuario.edad}" readonly>
 
 						</div>
 					</div>
+
+
+
 
 					<div class="form-group row">
 						<label class="col-lg-3 col-form-label form-control-label">Rol</label>
@@ -122,11 +126,29 @@
 						</div>
 					</div>
 
-					<a th:href="@{/edit}" role="button"
-						class="btn btn-outline-primary btn-sm">Editar perfil</a>
-					<button type="button" class="btn btn-outline-danger btn-sm"
-						data-toggle="modal" data-target="#exampleModal">Eliminar
-						cuenta</button>
+
+
+
+
+
+
+
+
+					<div class="form-group row">
+						<div class="col-lg-12 text-center">
+							<a th:href="@{/edit}" role="button"
+								class="btn btn-outline-primary btn-sm">Editar perfil</a>
+							<button type="button" class="btn btn-outline-danger btn-sm"
+								data-toggle="modal" data-target="#exampleModal">Eliminar
+								cuenta</button>
+
+						</div>
+					</div>
+
+
+
+
+
 
 					<!-- Modal -->
 					<div class="modal fade" id="exampleModal" tabindex="-1"
@@ -142,14 +164,14 @@
 										<span aria-hidden="true">&times;</span>
 									</button>
 								</div>
-								<div class="modal-body">¿Esta seguro que desea eliminar
-									todos los datos asociados a su cuenta?</div>
+								<div class="modal-body">¿Est&aacute seguro que desea
+									eliminar todos los datos asociados a su cuenta?</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-outline-secondary btn-sm"
 										data-dismiss="modal">Cancelar</button>
-									<a
-						th:href="@{/eliminar}" role="button"
-						class="btn btn-outline-danger btn-sm">Acepto eliminar mi cuenta</a>
+									<a th:href="@{/eliminar}" role="button"
+										class="btn btn-outline-danger btn-sm">Acepto eliminar mi
+										cuenta</a>
 								</div>
 							</div>
 						</div>
